# Nexus-

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  FAQ.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
backend/: Dockerfile  __init__.py  logging_config.py  main.py
backend/api/: __init__.py
backend/core/: __init__.py  agent_orchestrator.py  chat_engine.py  memory_manager.py
backend/database/: __init__.py  models.py
backend/services/: __init__.py
config/: settings.py
docs/: api-reference.md  architecture.md  creating-custom-agents.md  developer-guide.md  getting-started.md
frontend/mobile/: README.md
frontend/web/: Dockerfile  README.md  package.json
scripts/: deploy.sh  health-check.sh  reset.sh  start.sh
tests/: test_core.py
