[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus"
version = "1.0.0"
description = "منصة ذكاء اصطناعي متكاملة وقابلة للتوسع"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "vfdvdgbb1442-dotcom", email = "support@nexus.ai"}
]
keywords = ["ai", "assistant", "chatbot", "project-manager"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/vfdvdgbb1442-dotcom/Nexus"
Repository = "https://github.com/vfdvdgbb1442-dotcom/Nexus"
Issues = "https://github.com/vfdvdgbb1442-dotcom/Nexus/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["backend", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    ".venv"
]
ignore = ["E203", "W503"]
